--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
+  
+<!-- This is where we will keep important links and the title of our website -->
   <head>
     <title>My First Web Page</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   
+<!-- This is where we will keep the main content of our website -->
   <body>
+    <h1> Loreander's Website </h1>
     <p>Here goes nothing</p>
   <body>
+    
 </html>
