--- a/index.html
+++ b/index.html
@@ -3,14 +3,23 @@
   
 <!-- This is where we will keep important links and the title of our website -->
   <head>
-    <title>My First Web Page</title>
+    <title>My Info</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   
 <!-- This is where we will keep the main content of our website -->
   <body>
-    <h1> Loreander's Website </h1>
+    <h1> Timothy Lynch </h1>
     <p>Here goes nothing</p>
+    
+    <div class="navigation">
+      <ul>
+        <li>About Me</li>
+        <li>Education Background</li>
+        <li>Work Experience</li>
+        <li>Aspirations</li>
+      </ul>
+    </div>
   </body>
     
 </html>
