--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     
     <div class="navigation">
       <ul>
-        <li>About Me</li>
-        <li>Education Background</li>
-        <li>Work Experience</li>
-        <li>Aspirations</li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="education.html">Education Background</a></li>
+        <li><a href="work.html">Work Experience</a></li>
+        <li><a href="goals.html">Aspirations</a></li>
       </ul>
     </div>
   </body>
