--- a/education.html
+++ b/education.html
@@ -2,13 +2,24 @@
 <html>
 
   <head>
-    <title>Education Experience</title>
+    <title>Educational Background</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   
   <body>
     <h1>Education Experience</h1>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    </br>
+    <h3>High School</h3>
+    </br>
+    <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.
+    </p>
+    </br>
+    <h3>College</h3>
+    </br>
+    <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During my sophomore year I transferred from the NCSU to the University of Vermont.
+    </p>
+
+    
   </body>
   
 </html>
