--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
   </head>
   
   <body>
-    <h1>Education Experience</h1>
+    <h1>Educational Experience</h1>
     </br>
     <h3>High School</h3>
     </br>
