--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   
   <body>
     <h1> Timothy Lynch </h1>
-    
+    </br>
     <div class="grid">
       <div class="box a"><a href="about.html">About Me</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
       <div class="box c"><a href="work.html">Work Experience</a></div>
       <div class="box d"><a href="goals.html">Aspirations</a></div>
     </div>
+    </br>
+    <p>Hello World, and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
 
   </body>
     
