--- a/education.html
+++ b/education.html
@@ -14,11 +14,16 @@
     <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.
     </p>
     </br>
-    <h3>College</h3>
+    <h3>Under-Graduate</h3>
     </br>
-    <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During my sophomore year I transferred from the NCSU to the University of Vermont.
+    <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During my sophomore year I transferred from the NCSU to the University of Vermont. I graduated from UVM in the spring of 2010 with a degree in Secondary Education and a focus in mathematics. 
     </p>
+</br>
+<h3>Graduate</h3>
+</br>
+<p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project to the right. </p>
 
+<iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="550" height="400" src="https://prezi.com/embed/6_11bfwl_6hg/?bgcolor=ffffff&amp;lock_to_path=1&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE43MHdLNWpsdFJLb2ZHanI5L2p1ZFVKWHlNdVFIdWw5aHRTR2ZNZFF3PT0&amp;landing_sign=dIjLmHH5jf0DVVJ-2IU1YaUwS_TZvOm7a6quASoMggQ"></iframe>
     
   </body>
   
