--- a/work.html
+++ b/work.html
@@ -8,6 +8,14 @@
   
   <body>
     <h1>Work Experience</h1>
+    
+     <div class="grid">
+      <div class="box a"><a href="about.html">About Me</a></div>
+      <div class="box b"><a href="education.html">Educational Background</a></div>
+      <div class="box c"><a href="work.html">Work Experience</a></div>
+      <div class="box d"><a href="goals.html">Aspirations</a></div>
+    </div>
+    
     <p>Under Construction</p>
   </body>
   
