--- a/education.html
+++ b/education.html
@@ -7,9 +7,7 @@
   </head>
   
   <body>
-    <h1>Educational Experience</h1>
-    </br>
-  
+    <h1>Educational Background</h1>  
       <div class="grid">
       <div class="box a"><a href="about.html">About Me</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
