--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- This is where we will keep the main content of our website -->
   
   <body>
-    <h1> Timothy Lynch </h1>
+    <h1><a href="index.html">Timothy Lynch </a></h1>
     
     <div class="grid">
       <div class="box a"><a href="about.html">About Me</a></div>
