--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     
         
      <div class="grid">
-      <div class="box a"><a href="about.html">About Me</a></div>
+      <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
       <div class="box c"><a href="work.html">Work Experience</a></div>
       <div class="box d"><a href="goals.html">Aspirations</a></div>
