--- a/education.html
+++ b/education.html
@@ -10,6 +10,7 @@
     <h1>Educational Background</h1>  
     
     <div class="grid">
+      <div class="box e"><a href="index.html">Home</a></div>
       <div class="box a"><a href="about.html">About Me</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
       <div class="box c"><a href="work.html">Work Experience</a></div>
