--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 <!-- This is where I will keep the main content of my About Me Page -->
   <body>
     <h1>About Me</h1>
-    
-        
+   
      <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
+      <div class="box e"><a href="about.html">About Me</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
       <div class="box c"><a href="work.html">Work Experience</a></div>
       <div class="box d"><a href="goals.html">Aspirations</a></div>
