--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1><a href="index.html">Timothy Lynch </a></h1>
     
     <div class="grid">
+      <div class="box e"><a href="index.html">Home</a></div>
       <div class="box a"><a href="about.html">About Me</a></div>
       <div class="box b"><a href="education.html">Educational Background</a></div>
       <div class="box c"><a href="work.html">Work Experience</a></div>
