--- a/education.html
+++ b/education.html
@@ -31,7 +31,9 @@
 </br>
 <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project to the right. </p>
 
+<div class="prezi">
 <iframe id="iframe_container" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="550" height="400" src="https://prezi.com/embed/6_11bfwl_6hg/?bgcolor=ffffff&amp;lock_to_path=1&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE43MHdLNWpsdFJLb2ZHanI5L2p1ZFVKWHlNdVFIdWw5aHRTR2ZNZFF3PT0&amp;landing_sign=dIjLmHH5jf0DVVJ-2IU1YaUwS_TZvOm7a6quASoMggQ"></iframe>
+</div>
 </br>
 <h3>Post-Graduate</h3>
 </br>
