--- a/work.html
+++ b/work.html
@@ -17,7 +17,16 @@
       <div class="box d"><a href="goals.html">Aspirations</a></div>
     </div>
     
-    <p>Under Construction</p>
-  </body>
+    <h3>Math Teacher - 2010-Present</h3>
+    </br>
+  <p> I have been working at Milton High School for the past eight years. As a math educator I have taught Algebra, Geometry, Statistics, Algebra II, and AP Calculus. My experiences also include being a team leader, graduation speaker, and a coach. As a team leader I organized and facilitated cross-curricular meetings that focused on student needs and improving the learning community. I have coached the Golf Team (2017), Math Team (2011-2017), and Ultimate Frisbee Team (2017). I have been nominated for teacher of the year for the past two years. As an educator I had to work in a team setting, meet the needs of my 'clients', and work in a constantly changing landscape.</p>
+  </br>
+<h3>Colchester School Board - 2009-2010</h3>
+</br>
+<p>As a senior member of the student planning team I was also selected to be a student member of the Colchester School Board. Although I was a non-voting member of the school board I learned all about the intricate relationships that exist between community, school board, and teachers/staff. This experience still proves to be an important lens to look through now that I am an educator but also a member of the community in which I teach. </p>
+</br>
+<h3>Restaurant Employee / Manager - 2004-2010</hr>
+<p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
+</body>
   
 </html>
