--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
 </br>
 <p>As a senior member of the student planning team I was also selected to be a student member of the Colchester School Board. Although I was a non-voting member of the school board I learned all about the intricate relationships that exist between community, school board, and teachers/staff. This experience still proves to be an important lens to look through now that I am an educator but also a member of the community in which I teach. </p>
 </br>
-<h3>Restaurant Employee / Manager - 2004-2010</hr>
+<h3>Restaurant Employee / Manager - 2004-2010</h3>
 <p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
 </body>
   
