--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="box d"><a href="goals.html">Aspirations</a></div>
     </div>
     </br>
-    <p>Hello World, and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
+    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
 
   </body>
     
