--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
     <p>
       Hello there, my name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. I am currently in my eighth year of teaching at Milton High School. My passions include mathematics, problem solving, video games, reading, and team sports. At Milton I filled in as golf coach in the fall, coach the math team throughout the year, and coach Ultimate Frisbee in the spring. My favorite class to teach is AP Calculus due to its challenges and real world applications. Programming and web development has always been an interest but due to work and school I have never found the time to fully explore the field. Now that I have completed my MA+30 I am looking for my next challenge.
     </p>
+    
+    <div class="myimages">
+     
+    </div>
 
   </body>
   
