Changes to Education and Work

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-  
+
 <!-- This is where we will keep important links and the title of our website -->
   <head>
     <title>My Info</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
-  
+
 <!-- This is where we will keep the main content of our website -->
-  
+
   <body>
     <h1>Timothy Lynch</h1>
-    
+
     <div class="grid">
       <div class="box e"><a href="index.html">Home</a></div>
       <div class="box a"><a href="about.html">About Me</a></div>
-      <div class="box b"><a href="education.html">Educational Background</a></div>
-      <div class="box c"><a href="work.html">Work Experience</a></div>
+      <div class="box b"><a href="education.html">Education</a></div>
+      <div class="box c"><a href="work.html">Work</a></div>
       <div class="box d"><a href="goals.html">Aspirations</a></div>
     </div>
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
 
   </body>
-    
+
 </html>
