--- a/work.html
+++ b/work.html
@@ -2,22 +2,22 @@
 <html>
 
   <head>
-    <title>Work Experience</title>
+    <title>Work</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
-  
+
   <body>
-    <h1>Work Experience</h1>
-    
+    <h1>Work</h1>
+
      <div class="grid">
       <div class="box e"><a href="index.html">Home</a></div>
       <div class="box a"><a href="about.html">About Me</a></div>
-      <div class="box b"><a href="education.html">Educational Background</a></div>
-      <div class="box c"><a href="work.html">Work Experience</a></div>
+      <div class="box b"><a href="education.html">Education</a></div>
+      <div class="box c"><a href="work.html">Work</a></div>
       <div class="box d"><a href="goals.html">Aspirations</a></div>
     </div>
-    
-    <h3>Math Teacher - 2010-Present</h3>
+
+<h3>Math Teacher - 2010-Present</h3>
   <p> I have been working at Milton High School for the past eight years. As a math educator I have taught Algebra, Geometry, Statistics, Algebra II, and AP Calculus. My experiences also include being a team leader, graduation speaker, and a coach. As a team leader I organized and facilitated cross-curricular meetings that focused on student needs and improving the learning community. I have coached the Golf Team (2017), Math Team (2011-2017), and Ultimate Frisbee Team (2017). I have been nominated for teacher of the year for the past two years. As an educator I had to work in a team setting, meet the needs of my 'clients', and work in a constantly changing landscape.</p>
   </br>
 <h3>Colchester School Board - 2009-2010</h3>
@@ -26,5 +26,5 @@
 <h3>Restaurant Employee / Manager - 2004-2010</h3>
 <p> New York Pizza Oven in Colchester was my first job as a high school student. After a few years I became a manager of the restaurant and would open/close while advising the owner on scheduling and hiring decisions. Having this level of responsibility at a young age was crucial to improving my work ethic and realizing how small businesses function. </p>
 </body>
-  
+
 </html>
