Changing box labels

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <h1>Timothy Lynch</h1>
 
     <div class="grid">
-      <div class="box e"><a href="index.html">Home</a></div>
-      <div class="box a"><a href="about.html">About Me</a></div>
-      <div class="box b"><a href="education.html">Education</a></div>
-      <div class="box c"><a href="work.html">Work</a></div>
-      <div class="box d"><a href="goals.html">Aspirations</a></div>
+      <div class="box a"><a href="index.html">Home</a></div>
+      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box c"><a href="education.html">Education</a></div>
+      <div class="box d"><a href="work.html">Work</a></div>
+      <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
+
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
 
