--- a/about.html
+++ b/about.html
@@ -13,15 +13,17 @@
     <h1>About Me</h1>
 
      <div class="grid">
-      <div class="box e"><a href="index.html">Home</a></div>
-      <div class="box a"><a href="about.html">About Me</a></div>
-      <div class="box b"><a href="education.html">Education</a></div>
-      <div class="box c"><a href="work.html">Work</a></div>
-      <div class="box d"><a href="goals.html">Aspirations</a></div>
+      <div class="box a"><a href="index.html">Home</a></div>
+      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box c"><a href="education.html">Education</a></div>
+      <div class="box d"><a href="work.html">Work</a></div>
+      <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
     <p>
-      Hello there, my name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. I am currently in my eighth year of teaching at Milton High School. My passions include mathematics, problem solving, video games, reading, and team sports. At Milton I filled in as golf coach in the fall, coach the math team throughout the year, and coach Ultimate Frisbee in the spring. My favorite class to teach is AP Calculus due to its challenges and real world applications. Programming and web development has always been an interest but due to work and school I have never found the time to fully explore the field. Now that I have completed my MA+30 I am looking for my next challenge.
+      Hi, my name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. I am currently in my eighth year of teaching at Milton High School. Being a teacher has been an amazing experience but I am currently in the process of looking for my next adventure.
+
+      I have always had an eye on coding and programming thanks in large part to my father. My father was a programmer that spent his entire career working for IDX (now GE Healthcare) on Shelburne Road.
     </p>
 
   </body>
