--- a/education.html
+++ b/education.html
@@ -10,11 +10,11 @@
     <h1>Education</h1>
 
     <div class="grid">
-      <div class="box e"><a href="index.html">Home</a></div>
-      <div class="box a"><a href="about.html">About Me</a></div>
-      <div class="box b"><a href="education.html">Education</a></div>
-      <div class="box c"><a href="work.html">Work</a></div>
-      <div class="box d"><a href="goals.html">Aspirations</a></div>
+      <div class="box a"><a href="index.html">Home</a></div>
+      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box c"><a href="education.html">Education</a></div>
+      <div class="box d"><a href="work.html">Work</a></div>
+      <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
     <div class="grid2">
