Trying to add an image and grammar changes.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
     </div>
 
     </br>
-    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
+    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
   </body>
+
+  <img src=Milton_Ultimate_Frisbee.JPG alt="Ultime Frisbee at Milton">
 
 </html>
