--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
   </body>
 
-  <img src=Milton_Ultimate_Frisbee.JPG alt="Ultime Frisbee at Milton">
+  <img src=Sawyer.JPG alt="My Dog Sawyer">
 
 </html>
