--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
   </body>
 
-  <img src=/images/Sawyer.JPG alt="My Dog Sawyer">
+  <img src=/images/Sawyer.JPG alt="My Dog Sawyer #3">
 
 </html>
