--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
   </body>
 
-  <img src=my_first_project/Sawyer.JPG alt="My Dog Sawyer #4">
+  <img src="my_first_project/Sawyer.JPG" alt="My Dog Sawyer #5">
 
+  <img src="Sawyer.JPG" alt="Sawyer.JPG">
+  <img src="/images/Sawyer.JPG" alt="Images">
+  <img src="/tree/images/Sawyer.JPG" alt="Tree">
 </html>
