--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </body>
 
   <img src="my_first_project/Sawyer.JPG" alt="My Dog Sawyer #5">
-
+  <img src="https://github.com/Loreander/my_first_project/blob/images/Sawyer.JPG" alt="Web Address">
   <img src="Sawyer.JPG" alt="Sawyer.JPG">
   <img src="/images/Sawyer.JPG" alt="Images">
   <img src="/tree/images/Sawyer.JPG" alt="Tree">
