--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
 
+    <img src="Sawyer.JPG" alt="Randomly in Folder">
+    <img src="dogandi.JPG" alt="Dog and I Test">
+    <img src="/images/Sawyer.JPG" alt="Images Folder">
+
   </body>
 
 </html>
