--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <img src="Sawyer.JPG" alt="Randomly in Folder">
     <img src="dogandi.JPG" alt="Dog and I Test">
     <img src="/images/Sawyer.JPG" alt="Images Folder">
+    <img src="./Sawyer.JPG" alt="./Sawyer">
+    <img src="./images/Sawyer.JPG" alt="./images/Sawyer.JPG">
 
   </body>
 
