--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <img src="/images/Sawyer.JPG" alt="Images Folder">
     <img src="./Sawyer.JPG" alt="./Sawyer">
     <img src="./images/Sawyer.JPG" alt="./images/Sawyer.JPG">
+    <img src="./dogandi.JPG" alt="./dogandi.JPG">
 
   </body>
 
