--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
 
   </body>
 
-  <img src="my_first_project/Colorado Rockies Ball Park.JPG" alt="Colorado Ball Park">
+  <img src="./Sawyer.JPG" alt="./Sawyer.JPG">
+  <img src="/Sawyer.JPG" alt="/Sawyer.JPG">
+  <img src="Sawyer.JPG" alt="Sawyer.JPG">
+  <img src="./images/Sawyer.JPG" alt="./images/Sawyer.JPG">
+  
 </html>
