Copied Path Test

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <img src="./Sawyer.JPG" alt="./Sawyer.JPG">
   <img src="/Sawyer.JPG" alt="/Sawyer.JPG">
   <img src="Sawyer.JPG" alt="Sawyer.JPG">
-  <img src="./images/Sawyer.JPG" alt="./images/Sawyer.JPG">
-  
+  <img src="my_first_project/Milton Ultimate Frisbee.JPG" alt="Copied Path">
+
 </html>
