--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
+    <img src="https://github.com/Loreander/my_first_project/blob/images/Sawyer.JPG" alt="URL">s
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
