--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    <img src="https://github.com/Loreander/my_first_project/blob/images/Sawyer.JPG" alt="URL">
+    <img src="Sawyer.JPG" alt="Sawyer.JPG">
+    <img src="sawyer.jpg" alt="sawyer.jpg">
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
