--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    </br>
-    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to get to learn a little bit more about me and my journey.</p>
+    <img src="Sawyer.JPG" alt="Sawyer.JPG">
 
-    <img src="Sawyer.JPG" alt="Randomly in Folder">
-    <img src="dogandi.JPG" alt="Dog and I Test">
-    <img src="/images/Sawyer.JPG" alt="Images Folder">
-    <img src="./Sawyer.JPG" alt="./Sawyer">
-    <img src="./images/Sawyer.JPG" alt="./images/Sawyer.JPG">
-    <img src="./dogandi.JPG" alt="./dogandi.JPG">
+
+    </br>
+    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
   </body>
 
