--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    <img src="Sawyer.JPG" alt="Sawyer.JPG">
+    <img src="images/Sawyer.JPG" alt="Sawyer.JPG">
 
 
     </br>
