Changes to Image position and orientation.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-<!-- This is where we will keep important links and the title of our website -->
+<!-- This is where I will keep important links and the title of my website -->
   <head>
     <title>My Info</title>
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
 
-<!-- This is where we will keep the main content of our website -->
+<!-- This is where I will keep the main content of my website -->
 
   <body>
     <h1>Timothy Lynch</h1>
@@ -20,11 +20,11 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    <img src="images/Sawyer.JPG" alt="Sawyer.JPG">
-
-
     </br>
+
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
+
+      <img src="images/Sawyer.JPG" alt="Sawyer.JPG" class="center">
 
   </body>
 
