--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    <img src="Sawyer.JPG" alt="Sawyer.JPG">
-    <img src="sawyer.jpg" alt="sawyer.jpg">
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
+    <img src="dogandi.JPG" alt="Dog and I" class="center">
   </body>
 
 </html>
