--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </br>
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
-    <img src="dogandi.JPG" alt="Dog and I" class="center">
+    <img src="images/dogandi.JPG" alt="Dog and I" class="center">
   </body>
 
 </html>
