Adding Prezi Link. More font and photo sizing changes.

--- a/education.html
+++ b/education.html
@@ -26,7 +26,7 @@
 
       <div class="box g">
         <h3>Graduate</h3>
-        <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project below. </p>
+        <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project <a href="http://prezi.com/6_11bfwl_6hg/?utm_campaign=share&utm_medium=copy">here</a>. </p>
       </div>
 
       <div class="box h">
