changed href to src.

--- a/education.html
+++ b/education.html
@@ -35,7 +35,7 @@
        </div>
 
       <div class="uvmLogo">
-        <img href="images/uvmLogo.jpeg" alt="University of Vermont">
+        <img src="images/uvmLogo.jpeg" alt="University of Vermont">
       </div>
 
       <div class="box i">
