added title to dog and I

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
-    <img src="images/dogandi.JPG" alt="Dog and I" class="center">
+    <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
 
   </body>
 
