--- a/education.html
+++ b/education.html
@@ -7,15 +7,17 @@
   </head>
 
   <body>
-    <h1>Education</h1>
-
-    <div class="grid">
+    <header>
+      <h1>Education</h1>
+    </header>
+   
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="about.html">About Me</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
     <div class="grid2">
       <div class="box f">
@@ -32,7 +34,7 @@
       <div class="box h">
         <h3>Under-Graduate</h3>
         <p> For my post-secondary education I spent a year at North Carolina State majoring in Mathematics and Education. During my sophomore year I transferred from the NCSU to the University of Vermont. I graduated from UVM in the spring of 2010 with a degree in Secondary Education and a focus in mathematics. </p>
-       </div>
+      </div>
 
       <div class="box i">
         <h3>High School</h3>
@@ -41,7 +43,6 @@
 
       <div class="box k">
       </div>
-
     </div>
   </body>
 </html>
