--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <!-- This is where we will keep the main content of our website -->
 
   <body>
-    <h1>Timothy Lynch</h1>
+    <header>
+      <h1>Timothy Lynch</h1>
+    </header>
 
-    <div class="grid">
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="about.html">About Me</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
     </br>
 
