trying to fix my nav bar

--- a/education.html
+++ b/education.html
@@ -11,13 +11,13 @@
       <h1>Education</h1>
     </header>
    
-    <nav>
+    <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="about.html">About Me</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </nav>
+    </div>
 
     <div class="grid2">
       <div class="box f">
