--- a/about.html
+++ b/about.html
@@ -9,17 +9,16 @@
   </head>
 
 <!-- This is where I will keep the main content of my About Me Page -->
-  <header>
-    <h1>About Me</h1>
+<header>
+    <h1>About M</h1>
   </header>
-    
-  <nav>
-    <div class="box a"><a href="index.html">Home</a></div>
-    <div class="box b"><a href="about.html">About Me</a></div>
-    <div class="box c"><a href="education.html">Education</a></div>
-    <div class="box d"><a href="work.html">Work</a></div>
-    <div class="box e"><a href="goals.html">Aspirations</a></div>
-  </nav>
+     <div class="grid">
+      <div class="box a"><a href="index.html">Home</a></div>
+      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box c"><a href="education.html">Education</a></div>
+      <div class="box d"><a href="work.html">Work</a></div>
+      <div class="box e"><a href="goals.html">Aspirations</a></div>
+     </div>
 
     <p>
       Hi, my name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. I am currently in my eighth year of teaching at Milton High School. Being a teacher has been an amazing experience but I am currently in the process of looking for my next adventure.
