--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 <!-- This is where I will keep the main content of my About Me Page -->
 <header>
-    <h1>About M</h1>
+    <h1>About Me</h1>
   </header>
      <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
