changed the grid layout to be 3 wide

--- a/education.html
+++ b/education.html
@@ -23,7 +23,6 @@
       <div class="box f">
         <h3>Post-Graduate</h3>
         <p>Once I completed my Master's degree in Curriculum and Instruction I looked to complete my +30 by taking a variety of education classes through learnersedge.com. Learner's Edge was a great fit for a full-time educator that was looking to take classes during school and over the summer. I was able to complete ten classes over the past two years in a variety of topics including technology integration, student motivation, arts integration, and brain research. </p>
-        </br>
       </div>
 
       <div class="box g">
@@ -40,6 +39,11 @@
         <h3>High School</h3>
         <p> I attended Colchester High School in Vermont from 2006-2010. At Colchester I was a member of the Math Team, Student Planning Team, Student Representative on the School Board, and filmed the Varsity Soccer team during my senior year. During my years at CHS I discovered a passion for helping others, problem solving, and mathematics.</p>
       </div>
+
+      <div class="j"></div>
+      <div class="k"></div>
+      <div class="l"></div>
+      <div class="m"></div>
 
       <div class="box k">
       </div>
