--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <!-- This is where we will keep the main content of our website -->
 
   <body>
-    <h1>Timothy Lynch</h1>
+    <header>
+      <h1>Timothy Lynch</h1>
+    </header>
 
     <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
@@ -21,7 +23,7 @@
       <div class="box e"><a href="goals.html">Aspirations</a></div>
     </div>
 
-    </br>
+    <br>
 
     <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
 
