--- a/about.html
+++ b/about.html
@@ -9,9 +9,11 @@
   </head>
 
 <!-- This is where I will keep the main content of my About Me Page -->
-<header>
+  <body>
+  <header>
     <h1>About Me</h1>
   </header>
+  
      <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="about.html">About Me</a></div>
