deleted and changed the about file to projects

--- a/goals.html
+++ b/goals.html
@@ -4,7 +4,6 @@
   <head>
     <title>Aspirations</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link
   </head>
 
   <body>
@@ -14,7 +13,7 @@
 
     <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
