--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="grid">
       <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="about.html">About Me</a></div>
+      <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
@@ -25,8 +25,12 @@
 
     <br>
 
-    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to learn a little bit more about me and my journey.</p>
+    <p align="center">"Hello World", and welcome to my first website. Follow the navigation above to see prior work experiences, educational background, and ongoing projects.</p>
+    <br>
+    <p>
+      My name is Timothy Lynch and I was born and raised in Colchester VT. I currently live in Milton Vermont with my wife Christine and my dog Sawyer. Up until June of this year I was an educator at Milton High School. I am currently enrolled in the Burlington Code Academy and hope to one day work as a developer in Vermont.
 
+    </p>
     <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
 
   </body>
