lots of changes

--- a/education.html
+++ b/education.html
@@ -4,6 +4,7 @@
   <head>
     <title>Education</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="javascript" tpye="text/javascript" href="script.js">
   </head>
 
   <body>
@@ -11,13 +12,13 @@
       <h1>Education</h1>
     </header>
    
-    <div class="grid">
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
     <div class="grid2">
       <div class="box f">
@@ -27,7 +28,7 @@
 
       <div class="box g">
         <h3>Graduate</h3>
-        <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project <a href="http://prezi.com/6_11bfwl_6hg/?utm_campaign=share&utm_medium=copy">here</a>. </p>
+        <p> From 2011-2015 I took classes with local educators at a Southern New Hampshire University satellite campus. The program was targetted at educator's that were focused on getting their Master's degree while teaching full time. My action research project was the culmination of my Master's Degree and was focused on the topic of growth mindsets vs. fixed mindsets. You can see me Prezi discussing my action research project <a class="bodyLinks" href="http://prezi.com/6_11bfwl_6hg/?utm_campaign=share&utm_medium=copy">here</a>. </p>
       </div>
 
       <div class="box h">
