--- a/goals.html
+++ b/goals.html
@@ -4,6 +4,7 @@
   <head>
     <title>Aspirations</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="javascript" tpye="text/javascript" href="script.js">
   </head>
 
   <body>
@@ -11,15 +12,15 @@
           <h1>Goals</h1>
       </header>
 
-    <div class="grid">
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
-    <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits I am looking for my next great adventure. I became interested in programming and web development recently after hearing about Burlington Code Academy in the Seven Days. I spent the past few weeks working on <a href="https://www.codecademy.com/" target="_blank">codeacademy.com</a> to explore the field and see if I have a knack for the field. It has been an awesome time so far and while this website needs LOTS of work I am happy that I understand some of the basic structures and processes. </p>
+    <p>I consider myself to be a lifelong learner. I love to learn new things and challenge myself as often as possible. I have been going to school continuously for 25 years and now that I have completed my Master's Degree and additional credits I am looking for my next great adventure. I became interested in programming and web development recently after hearing about Burlington Code Academy in the Seven Days. I spent the past few weeks working on <a class="bodyLinks" href="https://www.codecademy.com/" target="_blank">codeacademy.com</a> to explore the field and see if I have a knack for the field. It has been an awesome time so far and while this website needs LOTS of work I am happy that I understand some of the basic structures and processes. </p>
 
   </body>
 
