--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <head>
     <title>My Info</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="javascript" tpye="text/javascript" href="script.js">
   </head>
 
 <!-- This is where we will keep the main content of our website -->
@@ -15,13 +16,13 @@
       <h1>Timothy Lynch</h1>
     </header>
 
-    <div class="grid">
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
     <br>
 
