--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
   <head>
     <title>Work</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="javascript" tpye="text/javascript" href="script.js">
   </head>
 
   <body>
@@ -11,13 +12,13 @@
       <h1>Work</h1>
     </header>
 
-    <div class="grid">
+    <nav>
       <div class="box a"><a href="index.html">Home</a></div>
       <div class="box b"><a href="projects.html">Projects</a></div>
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
-    </div>
+    </nav>
 
 <h3>Math Teacher - August 2010-June 2018</h3>
 
