adding some junk

--- a/education.html
+++ b/education.html
@@ -42,7 +42,9 @@
       </div>
 
       <div class="j"></div>
+        <img src="images/NCStateLogo.png" title="North Carolina State University">
       <div class="k"></div>
+        <img src="images/uvmLogo.jpeg" title="University of Vermont">
       <div class="l"></div>
       <div class="m"></div>
 
