--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <h1>Timothy Lynch</h1>
+      <div><img src="images/TimAtArrowhead.jpg" class="z" title="Tim and Arrowhead"></div>
     </header>
 
     <nav>
@@ -22,6 +23,7 @@
       <div class="box c"><a href="education.html">Education</a></div>
       <div class="box d"><a href="work.html">Work</a></div>
       <div class="box e"><a href="goals.html">Aspirations</a></div>
+
     </nav>
 
     <br>
@@ -34,6 +36,15 @@
     </p>
     <img src="images/dogandi.JPG" title="Tim (left) and Sawyer (right)" alt="Dog and I" class="center">
 
+  <footer>
+    <table>
+      <tr>
+        <td><a href="https://github.com/Loreander"><img src="images/githubLogo.jpg" title="https://github.com/Loreander" class="logo"></a></td>
+        <td><a href="https://www.linkedin.com/in/tlynchvt"><img src="images/linkedinLogo.jpg" title="LinkedIn Profile Page" class="logo"></a></td>
+        <td><a href="mailto:tlynch.vt@gmail.com"><img src="images/gmailLogo.png" title="tlynch.vt@gmail.com" class="logo"></a></td>
+      </tr>
+    </table>
+  </footer>
   </body>
 
 </html>
