--- a/projects.html
+++ b/projects.html
@@ -27,15 +27,20 @@
 
   <div class="projectsGrid">
     <h2 class="project-title">Markdown Preview</h2>
-    <p class="project-description" id="markdownDescription">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings</p>
-    <a href=markdown.html><img id="markdownScreenshot" src="images/MarkdownScreenshot.JPG" title="Markdown Preview" href="markdown.html"></a>
+    <p class="project-description">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings</p>
+    <a href="markdown.html"><img class="projectImage" src="images/MarkdownScreenshot.jpg" title="Markdown Preview Screenshot"></a>
   </div>
 
   <hr>
 
-  <h2 class="project-title">Guess a Number A.I</h2>
+  <div class="projectsGrid">
+    <h2 class="project-title">Pick a Number</h2>
+    <p class="project-description">The Pick a Number web app will ask you to guess a number from 1-100. Then you will tell the computer if your number is higher or lower. Eventually the computer will guess your number!</p>
+    <a href="guess.html"><img class="projectImage" src="images/guess.jpg" title="Pick a Number Screenshot"></a>
+  </div>
+
   <hr>
-  <h2 class="project-title">Guess a Number Player</h2>
+  <h2 class="project-title">Guess my Number</h2>
   <hr>
 
   <footer>
