added some projects and general clean up

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <head>
     <title>My Info</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="javascript" tpye="text/javascript" href="script.js">
+    <link rel="javascript" type="text/javascript" href="script.js">
   </head>
 
 <!-- This is where we will keep the main content of our website -->
@@ -14,15 +14,15 @@
   <body>
     <header>
       <h1>Timothy Lynch</h1>
-      <div><img src="images/TimAtArrowhead.jpg" class="z" title="Tim and Arrowhead"></div>
+<!-- Get this image working soon <div><img src="images/TimAtArrowhead.JPG" class="headerImage" title="Tim and Arrowhead"></div> -->
     </header>
 
     <nav>
-      <div class="box a"><a href="index.html">Home</a></div>
-      <div class="box b"><a href="projects.html">Projects</a></div>
-      <div class="box c"><a href="education.html">Education</a></div>
-      <div class="box d"><a href="work.html">Work</a></div>
-      <div class="box e"><a href="goals.html">Aspirations</a></div>
+      <div class="indexNav"><a href="index.html">Home</a></div>
+      <div class="projectsNav"><a href="projects.html">Projects</a></div>
+      <div class="educationNav"><a href="education.html">Education</a></div>
+      <div class="workNav"><a href="work.html">Work</a></div>
+      <div class="goalsNav"><a href="goals.html">Aspirations</a></div>
 
     </nav>
 
