--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
   <div class="projectsGrid">
     <h2 class="project-title">Markdown Preview</h2>
     <p class="project-description">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings</p>
-    <a href="markdown.html"><img class="projectImage" src="images/MarkdownScreenshot.jpg" title="Markdown Preview Screenshot"></a>
+    <a href="markdown.html"><img class="projectImage" src="images/MarkdownScreenshot.JPG" title="Markdown Preview Screenshot"></a>
   </div>
 
   <hr>
@@ -40,7 +40,11 @@
   </div>
 
   <hr>
-  <h2 class="project-title">Guess my Number</h2>
+  <div class="projectsGrid">
+      <h2 class="project-title">Guess my Number</h2>
+      <p class="project-description">Its the opposite of 'Pick a Number'. In this web app, you will try to guess the computer's number between 1-100. How quickly can you guess the computers number?!</p>
+<!-- Once we get a screenshot of our 'Guess my Number' game     <a href="g.html"><img class="projectImage" src="images/guess.jpg" title="Pick a Number Screenshot"></a> -->
+    </div>
   <hr>
 
   <footer>
